--- a/app/src/main/res/layout/fragment_system_info_map.xml
+++ b/app/src/main/res/layout/fragment_system_info_map.xml
@@ -196,6 +196,30 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="#8A8A8A" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginRight="10dp"
+                        android:gravity="right"
+                        android:text="Serial Number (Touch to copy) :"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/serial_number"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:breakStrategy="high_quality"
+                        android:gravity="left"
+                        android:text="unknown"
+                        android:textColor="@color/black" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#8A8A8A" />
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
