--- a/app/src/main/res/layout/dialog_list_items.xml
+++ b/app/src/main/res/layout/dialog_list_items.xml
@@ -6,28 +6,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <Switch
+            android:layout_marginTop="25dp"
             android:id="@+id/fw_dialog_list_items_switch"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select All  "
+            android:layout_marginBottom="5dp"
             android:checked="false"
-            android:layout_marginLeft="25dp"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Export list"
-            />
-    </LinearLayout>
+            android:layout_marginHorizontal="15dp"/>
 
+
+    <Switch
+        android:layout_marginHorizontal="15dp"
+        android:id="@+id/fw_dialog_list_items_mapper_switch"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show devices under mapper"
+        android:layout_marginBottom="5dp"
+        android:checked="false" />
+    <Button
+        android:layout_marginHorizontal="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="Export list"
+        />
 
     <ListView
         android:id="@+id/listViewItems"
