--- a/app/src/main/res/layout/dialog_list_items.xml
+++ b/app/src/main/res/layout/dialog_list_items.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="5dp"
         android:checked="false" />
     <Button
+        android:id="@+id/fw_dialog_list_items_export"
         android:layout_marginHorizontal="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
