--- a/app/src/main/res/layout/fragment_system_info_map.xml
+++ b/app/src/main/res/layout/fragment_system_info_map.xml
@@ -484,6 +484,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
 
+                            android:stretchColumns="*"
+                            android:shrinkColumns="*"
                             app:allow_click_inside_cell="true"
                             app:allow_click_inside_row_header="true"
                             app:allow_click_inside_column_header="true"
