[Partition Manager] Fix total free 0 bug [Cpp Lib] Add support.cc\h

--- a/app/src/main/res/layout/firmware_list_dialog.xml
+++ b/app/src/main/res/layout/firmware_list_dialog.xml
@@ -45,6 +45,7 @@
         android:text="Export list" />
 
     <ListView
+        android:textIsSelectable="true"
         android:id="@+id/listViewItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
