--- a/app/src/main/res/layout/fragment_xml_manager.xml
+++ b/app/src/main/res/layout/fragment_xml_manager.xml
@@ -183,6 +183,7 @@
                         android:layout_height="50dp"
                         android:text="Encrypt"/>
                     <TextView
+                        android:textIsSelectable="true"
                         android:id="@+id/xml_encrypt_tv_log"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
