--- a/app/src/main/res/layout/fragment_system_info_map.xml
+++ b/app/src/main/res/layout/fragment_system_info_map.xml
@@ -158,6 +158,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
+                        android:textIsSelectable="true"
                         android:id="@+id/system_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -174,6 +175,7 @@
 
 
                     <TextView
+                        android:textIsSelectable="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
@@ -266,6 +268,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
+                        android:textIsSelectable="true"
                         android:id="@+id/virtual_sd_size"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -289,6 +292,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
+                        android:textIsSelectable="true"
                         android:id="@+id/virtual_sd_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -313,6 +317,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
+                        android:textIsSelectable="true"
                         android:id="@+id/metadata_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -336,6 +341,7 @@
                         android:textColor="@color/black" />
 
                     <TextView
+                        android:textIsSelectable="true"
                         android:id="@+id/metadata_area"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -459,6 +465,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/total_sector_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -480,6 +487,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/total_size_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -501,6 +509,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/free_sector_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -522,6 +531,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/free_size_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -564,6 +574,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/entry_limit_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -585,6 +596,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/physical_sector_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -606,6 +618,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/logical_sector_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -626,7 +639,8 @@
                                     android:layout_height="wrap_content"
                                     android:text=" : "
                                     android:textColor="@color/black"/>
-                                <atms.app.agiskclient.UIcomponents.CopiableTextView
+                                <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/guid_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -635,6 +649,7 @@
                             </TableRow>
                             <TableRow
                                 android:layout_width="match_parent"
+                                android:layout_marginBottom="15dp"
                                 android:layout_height="wrap_content">
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -648,6 +663,7 @@
                                     android:text=" : "
                                     android:textColor="@color/black"/>
                                 <TextView
+                                    android:textIsSelectable="true"
                                     android:id="@+id/part_align_sector_tv"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
