--- a/app/src/main/res/layout/notice_item.xml
+++ b/app/src/main/res/layout/notice_item.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textIsSelectable="true"
             android:layout_marginLeft="15dp"
             android:layout_width="match_parent"
             android:id="@+id/notice_content"
