--- a/app/src/main/res/layout/table_view_corner_layout.xml
+++ b/app/src/main/res/layout/table_view_corner_layout.xml
@@ -5,6 +5,7 @@
     android:background="@android:color/white">
 
     <TextView
+        android:textIsSelectable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
